# ds-a

./: README.md
1_algorithmic_toolbox/: algorithmic_toolbox_index.md
1_algorithmic_toolbox/week4_divide_and_conquer/: CMakeLists.txt
1_algorithmic_toolbox/week4_divide_and_conquer/1_binary_search/: binary_search.cpp
1_algorithmic_toolbox/week4_divide_and_conquer/5_number_of_inversions/: inversions.cpp
1_algorithmic_toolbox/week4_divide_and_conquer/6_organizing_a_lottery/: .points_and_segments.cpp.swp  points_and_segments.cpp  points_and_segments.out
1_algorithmic_toolbox/week4_divide_and_conquer/7_closest_points/: closest.cpp
1_algorithmic_toolbox/week5_dynamic_programming1/1_money_change_again/: change_dp.cpp
1_algorithmic_toolbox/week5_dynamic_programming1/2_primitive_calculator/: primitive_calculator.cpp
1_algorithmic_toolbox/week5_dynamic_programming1/lecture_examples/: .dp_recursive_change.cpp.swp  dp_recursive_change.cpp  recursive_change.cpp
